[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/icons/chevron-right_white_16x16.svg" type="Texture" id=1]
[ext_resource path="res://assets/textures/CheckButton/GuiToggleOn.svg" type="Texture" id=2]
[ext_resource path="res://src/Toolbox/DebugView/EditorView/DebugEditorView.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/CheckButton/GuiToggleOff.svg" type="Texture" id=4]
[ext_resource path="res://src/Generic/AnimatedToolButton.gd" type="Script" id=5]
[ext_resource path="res://src/Toolbox/DebugView/EditorView/DebugEditorValues.gd" type="Script" id=6]
[ext_resource path="res://src/Generic/AnimatedToolButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/icons/arrow-left_white_24x24.svg" type="Texture" id=8]

[node name="DebugEditorView" type="ScrollContainer"]
margin_right = 284.0
margin_bottom = 625.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Container" type="VBoxContainer" parent="."]
margin_right = 284.0
margin_bottom = 625.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="Back" type="ToolButton" parent="Container" instance=ExtResource( 7 )]
margin_right = 284.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
text = "EDITOR debug"
icon = ExtResource( 8 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
signal_on_pressed = "debug_view_displayed"

[node name="Values" type="VBoxContainer" parent="Container"]
margin_top = 48.0
margin_right = 284.0
margin_bottom = 254.0
custom_constants/separation = 24
script = ExtResource( 6 )

[node name="Workspace" type="ToolButton" parent="Container/Values" instance=ExtResource( 7 )]
margin_right = 284.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
toggle_mode = true
text = "Workspace"
icon = ExtResource( 1 )
align = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorkspaceData" type="RichTextLabel" parent="Container/Values"]
visible = false
margin_top = 46.0
margin_right = 280.0
margin_bottom = 246.0
rect_min_size = Vector2( 280, 200 )
text = "plachodler 
asd
asd
asd
as"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorkspacePristine" type="CheckButton" parent="Container/Values"]
margin_top = 48.0
margin_right = 284.0
margin_bottom = 72.0
custom_icons/on_disabled = ExtResource( 4 )
custom_icons/off_disabled = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
disabled = true
text = "workspace_pristine"

[node name="LoadLastOpenedFile" type="CheckButton" parent="Container/Values"]
margin_top = 96.0
margin_right = 284.0
margin_bottom = 120.0
custom_icons/on_disabled = ExtResource( 4 )
custom_icons/off_disabled = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
disabled = true
text = "load_last_opened_file"

[node name="IsLoading" type="CheckButton" parent="Container/Values"]
margin_top = 144.0
margin_right = 284.0
margin_bottom = 168.0
custom_icons/on_disabled = ExtResource( 4 )
custom_icons/off_disabled = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
disabled = true
text = "is_loading"

[node name="Locale" type="HBoxContainer" parent="Container/Values"]
margin_top = 192.0
margin_right = 284.0
margin_bottom = 206.0

[node name="Label" type="Label" parent="Container/Values/Locale"]
margin_right = 264.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "locale"

[node name="Value" type="Label" parent="Container/Values/Locale"]
margin_left = 268.0
margin_right = 284.0
margin_bottom = 14.0
text = "en"
